--- a/src/components/Layout/layout.scss
+++ b/src/components/Layout/layout.scss
@@ -44,49 +44,50 @@
     .text-zone {
         position: absolute;
         left: 10%;
-        top: 50%;
+        top: 17%;
         transform: translateY(-50%);
         width: 35%;
         vertical-align: middle;
         display: table-cell;
         max-height: 90%;
+        margin-left: 10%;
+
+        h1 {
+            font-size: 53px;
+            font-family: 'Coolvetica';
+            color: white;
+            font-weight: 400;
+            margin-top: 0;
+            position: relative;
+            margin-bottom: 40px;
+            left: 10px;
+            white-space: nowrap;
+        }
+    //     &::before {
+    //         content: '<h1>';
+    //         font-size: 18px;
+    //         font-family: 'La Belle Aurore';
+    //         position: absolute;
+    //         margin-top: -10px;
+    //         left: -10px;
+    //         opacity: 0.6;
+    //         line-height: 18px;
+    //     }
+
+    //     &::after {
+    //         content: '</h1>';
+    //         font-family: 'La Belle Aurore';
+    //         font-size: 18px;
+    //         line-height: 18px;
+    //         position: absolute;
+    //         left: -30px;
+    //         bottom: -20px;
+    //         margin-left: 20px;
+    //         opacity: 0.6;
+    //     }
     }
 
-    h1 {
-        font-size: 53px;
-        font-family: 'Coolvetica';
-        color: #ffd700;
-        font-weight: 400;
-        margin-top: 0;
-        position: relative;
-        margin-bottom: 40px;
-        left: 10px;
-
-        &::before {
-            content: '<h1>';
-            font-size: 18px;
-            font-family: 'La Belle Aurore';
-            position: absolute;
-            margin-top: -10px;
-            left: -10px;
-            opacity: 0.6;
-            line-height: 18px;
-        }
-
-        &::after {
-            content: '</h1>';
-            font-family: 'La Belle Aurore';
-            font-size: 18px;
-            line-height: 18px;
-            position: absolute;
-            left: -30px;
-            bottom: -20px;
-            margin-left: 20px;
-            opacity: 0.6;
-        }
-    }
-
-    p {
+    .intro {
         font-style: 13px;
         color: #fff;
         font-family: sans-serif;
@@ -109,7 +110,7 @@
 
     .text-animate-hover {
         &:hover {
-            color: #fff;
+            color: #ffd700;
         }
     }
 }
