--- a/src/components/ProjectSection/projectSection.scss
+++ b/src/components/ProjectSection/projectSection.scss
@@ -107,6 +107,7 @@
     .project-page {
         .text-zoneP h1 {
             font-size: 41px;
+            white-space: nowrap;
         }
 
         .carousel {
